Add base for 2in7v2 rendering

--- a/public/2in7v2/index.html
+++ b/public/2in7v2/index.html
@@ -45,9 +45,10 @@
 </head>
 
 <body>
-    <h1 class="gray-3">COUCOU ALMA</h1>
+    <h1 class="gray-3">MIsAOU</h1>
 
     <h1 class="gray-1">BITCOIN</h1>
+    <h1 class="gray-2">TOTO</h1>
     <h1 class="gray-2">TOTO</h1>
 </body>
 
