--- a/public/2in7v2/display.html
+++ b/public/2in7v2/display.html
@@ -38,7 +38,7 @@
 
 <body>
     <div class="frame-container">
-        <iframe src="index.html"></iframe>
+        <iframe src="template.html"></iframe>
     </div>
 </body>
 
