--- a/public/2in7v2/template.html
+++ b/public/2in7v2/template.html
@@ -46,10 +46,10 @@
 </head>
 
 <body>
-    <h1 class="gray-3">BTC: 93786</h1>
-    <h1 class="gray-1">ETH: 3426.33</h1>
-    <h1 class="gray-2">SOL: 235.87</h1>
-    <h1 class="gray-3">2024-11-25 22:22</h1>
+    <h1 class="gray-3">BTC: {{bitcoin_price}} $</h1>
+    <h1 class="gray-1">ETH: {{etherum_price}} $</h1>
+    <h1 class="gray-2">SOL: {{solana_price}} $</h1>
+    <h1 class="gray-3">{{render_date}}</h1>
 </body>
 
 </html>
